# desktop-pet

./: .gitignore  README.md  generate-breeds.cjs  generate-sprites.cjs  index.html  package-lock.json  package.json
docs/: index.html
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: CatWalk.tsx  RadialMenuDemo.tsx  Root.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_window.rs  dialogue.rs  lib.rs  main.rs  memory.rs
src/components/: AchievementToast.tsx  AchievementsPanel.tsx  ChatInput.tsx  CommandPalette.tsx  FriendsPanel.tsx  JournalPanel.tsx  NotesPanel.tsx  Pet.tsx  RadialMenu.tsx  SettingsPanel.tsx  SpeechBubble.tsx  StickyNote.tsx  VisitingPet.tsx
src/hooks/: useAchievements.ts  useActiveWindow.ts  useAmbientMusic.ts  useCursorPassthrough.ts  useDialogue.ts  useEventTracker.ts  useFriends.ts  useJournal.ts  useNotes.ts  usePetMovement.ts  useTheme.ts  useWindowPerching.ts
src/lib/: commands.ts  fuzzyMatch.ts  supabase.ts
src/styles/: achievements.css  bubble.css  friends.css  journal.css  menu.css  notes.css  pet.css  settings.css
