[package]
name = "desktop-pet"
version = "0.1.0"
description = "A desktop pet cat powered by Claude"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
active-win-pos-rs = "0.8"
tokio = { version = "1", features = ["full"] }
core-graphics = "0.24"
core-foundation = "0.10"
dotenvy = "0.15"
tauri-plugin-global-shortcut = "2"
regex = "1"
